# weclaw

./: .env.example  .gitattributes  .gitignore  DOCUMENT_SCANNER_GUIDE.md  FAMILY_MEMBER_DEVELOPMENT_REPORT.md  FAMILY_MEMBER_QUICKREF.md  LICENSE  QUICK_REFERENCE_TEST.md  README.md  RELEASE_NOTES_ENGLISH_CONVERSATION.md  RELEASE_NOTES_STUDY_SOLVER.md  STUDY_SOLLER_QUICKSTART.md  TEST_STATUS_DELI_SCANNER.md  WECHAT_QUICKSTART.md  __init__.py  build.py  conftest.py  email_check_log.txt  file_version_info.txt  gomoku.html  installer.nsi  pip_list_20260322.txt  pip_list_check.txt  pip_list_for_check.txt  pip_list_new_20260308.txt  pyproject.toml  requirements.txt  requirements_20260324.txt  sales_data.csv  start_remote_server.bat  test_english_conversation.html  winclaw.spec  早晨起床英语闪卡_带音频.html  清明古诗.txt
.qoder/plans/: PWA 离线容错优化方案_修订版.md  PWA_Mobile_Optimization_Plan_14d8cf77.md  PWA离线容错优化方案_0d45c19e.md  WinClaw_日志系统完善方案_0e74806f.md  服务器端日志系统方案_0e74806f.md
config/: browserbase_contexts.json  default.toml  mcp_servers.json  models.toml  platform_specific.example.toml  remote_server.toml  tools.json  wechat_config.yaml
config/workflows/: desktop_organizer.yaml  smart_screenshot.yaml  system_cleanup.yaml  web_scraper.yaml
docs/: v2.13.0_2026-03-22_远程绑定TAB页面优化与QThread崩溃修复.md  v2.21.2_2026-03-24_语音对话回复重复修复与英语口语增强.md  v2.29.1_2026-03-28_技术经验_subprocess使用sys.executable.md
docs/0_阶段开发进度总结报告/: v2.9.2_2026-03-21_Token用量显示修复.md
docs/开发记录/: v2.12.0_2026-03-22_主动陪伴智能系统.md
llm_api_guide/: cogview4开发文档.md  deepseek_api.md  glm4.6v.md  glm_api_guide.md  glm语音识别api文档.md  kimi_api_guide.md  kimi_calculate_token.md  kimi_document_api.md  kimi_partial_mode.md
llm_api_guide/大模型调用API和SDK文档/: deepseek_api_sdk.md  kimi_api_sdk.md  qwen_api_sdk.md
resources/: csdn_cookies.json
resources/docx_templates/: templates.py
rss_tool/: rss_test_results.json  rss_tester.py  run_rss_test.py
scripts/: analyze_log_issue.py  analyze_startup.py  analyze_traces.py  cleanup_logs.py  cleanup_voice_input.py  collect_experiment_data.py  debug_testuser2_binding.py  fix_duplicate_fingerprints.py  fix_voice_input.py  fix_voice_transcribe_logic.py  migrate_family_members.py  query_user_device_mapping.py  start_interactive_dashboard.py  start_neuro_dashboard.py  start_pyqtgraph_dashboard.py  test_all_actions.py  test_device_api.py  test_glm_asr_default.py  test_gui_tools.py  test_logging.py  test_office_tools.py  test_output_quality.py  test_phase1_ocr.py  test_phase2_cache.py  test_ppt_image_layouts.py  test_ppt_templates.py  test_qwen_tts.py  test_record_deps.py  test_rich_ppt.py  test_stunning_ppt.py  validate_tool_chain.py  verify_db.py  verify_glm_asr.py  verify_optimization.py  view_logs.py  数据库修复报告.txt
src/: __init__.py  __main__.py  app.py
src/consciousness/: README.md  __init__.py  approval_interface.py  background_loop.py  backup_manager.py  bridge.py  consciousness_manager.py  diagnosis_engine.py  embodiment.py  emergence_catalyst.py  emergence_metrics.py  evolution_tracker.py  health_monitor.py  perception.py  repair_executor.py  self_repair.py  tool_creator.py  types.py
src/conversation/: __init__.py  ask_parser.py  ask_widget.py  manager.py  task_notification.py  task_scheduler.py  timeout_manager.py  tts_player.py  voice_recognizer.py  wake_word_detector.py
src/core/: agent.py  (+24 more)
tests/: GLM_ASR_INTEGRATION_TEST_REPORT.md  debug_search_html.py  demo_tts_preprocess.py  neuro_report_20260219_181535.md  profile_settings_dialog.py  quick_test_voice.py  run_all_tests.py  run_todo_tests copy.py  test_agent_consciousness.py  test_background_loop.py  test_basic.py  test_batch6_tools.py  test_batch_paper_analyzer.py  test_binding_and_routing.py  test_collapse_feature.py  test_complete.py  test_consciousness_batch.py  test_consciousness_integration.py  test_conversation.py  test_cyber_universe_blue.py  test_cyberpunk_theme.py  test_daily_task_scheduler.py  test_daily_task_tool.py  test_deli_auto.py  test_deli_scanner.py  test_deli_scanner_optimized.py  test_device_fingerprint_fix.py  test_document_scanner.py  test_document_scanner_fix.py  test_english_conversation.py  test_english_conversation_ui.py  test_export.py  test_family_member.py  test_file_binary_detection.py  test_glm_asr.py  test_import.py  test_integration.py  test_knowledge_rag.py  test_models.py  test_multi_candidate.py  (+59 more)
tools/: WECHAT_DEVELOPMENT_REPORT.md  browserbase_auth_helper.py  csdn_publisher.py  debug_english_schema.py  debug_english_ui.py  docx_to_md_converter.py  docx_to_md_simple.py  generate_test_html.py  setup_csdn_auth.bat  story_generator_INSTALL_GUIDE.md  story_generator_launcher.py  test_english_qapp_compat.py  test_english_simple.py  test_english_ui_html.py  test_simple_html_display.py
weclaw_server/: LOGGING_GUIDE.md  requirements.txt  start_admin.bat  start_admin.bat - Shortcut.lnk  start_pwa.bat  start_server.bat
winclaw_server/: .env.example  start_admin.bat  start_pwa.bat  start_server.bat
(+335 files in other folders)
